allow PATCH HTTP method in CORS configuration